Fixed bold fonts displaying weirdly on Safari

--- a/public_html/styles/application.css
+++ b/public_html/styles/application.css
@@ -10,7 +10,7 @@ main > div > div.info {
 	margin: 0;
 	max-width: none;
 	transition: opacity 0.2s ease-in-out 0.05s, visibility 0.2s ease-in-out 0.05s;
-	justify-content: end;
+	justify-content: flex-end;
 	min-height: 250px;
 	min-width: 250px;
 }
